[gd_scene load_steps=5 format=3 uid="uid://eep41r5sbfbv"]

[ext_resource type="Script" uid="uid://b5ethocqvjufx" path="res://Scripts/Combat/enemy_triangle_wizard.gd" id="1_31uij"]
[ext_resource type="Texture2D" uid="uid://co6y1u02ay55v" path="res://Assets/spritePNGs/Enemy_LightningWiz_Tri.png" id="2_31uij"]
[ext_resource type="PackedScene" uid="uid://sus6s80ptul7" path="res://AI Modules/Detectors/target_detector.tscn" id="3_pxxvo"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_b5y0u"]
points = PackedVector2Array(284.286, 0, -190, 250, -190, -250)

[node name="EnemyTriangleWizard" type="CharacterBody2D"]
scale = Vector2(0.7, 0.7)
collision_mask = 2
script = ExtResource("1_31uij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.42857, 0)
shape = SubResource("ConvexPolygonShape2D_b5y0u")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(50, 0)
rotation = -1.5708
texture = ExtResource("2_31uij")

[node name="TargetDetector" parent="." instance=ExtResource("3_pxxvo")]
visible = false
scale = Vector2(40, 40)

[node name="bullet_marker_1" type="Marker2D" parent="."]
position = Vector2(-642.857, -4.54747e-13)

[node name="bullet_marker_2" type="Marker2D" parent="."]
position = Vector2(-642.857, -642.857)

[node name="bullet_marker_3" type="Marker2D" parent="."]
position = Vector2(500, 285.714)

[node name="bullet_marker_4" type="Marker2D" parent="."]
position = Vector2(500, -285.714)

[node name="bullet_marker_5" type="Marker2D" parent="."]
position = Vector2(-642.857, 642.857)
